--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@
 title: Timothy Basanov
 email: timofey.basanov@gmail.com
 url: "http://timothybasanov.com" # the base hostname & protocol for your site
-github_username:  timothybasanov
+github_username: timothybasanov
+twitter_username: timothybasanov 
 timezone: America/Los_Angeles
