--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Timothy Basanov's home page
+title: Timothy Basanov
 email: timofey.basanov@gmail.com
 url: "https://timothybasanov.com" # the base hostname & protocol for your site
 github_username: timothybasanov
@@ -21,3 +21,4 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+      excerpt_separator: <!--more-->
