Add: Hardware accelerated h264 ffmpeg

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ email: timofey.basanov@gmail.com
 url: "https://timothybasanov.com" # the base hostname & protocol for your site
 github_username: timothybasanov
 twitter_username: timothybasanov
+linkedin_username: basanov
 description: >
   Timothy's projects and
   a blog with instructions for tricky edge cases that I
