Added Synology NAS Port 80 and 443 proxy

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ twitter_username: timothybasanov
 linkedin_username: basanov
 description: >
   Timothy's projects and
-  a blog with instructions for tricky edge cases that I
+  instructions for tricky edge cases that I
   encountered either at home or at work
 
 # Build settings
